variables.RunFour.scala.error
Compilation error:
RunFour:2: error: illegal start of simple expression
while (x != 4)) {
              ^